[tool.poetry]
name = "siralim-dataminer"
version = "0.1.0"
description = "A tool for parsing and organizing Siralim 3 data files."
authors = ["desophos <1887450+desophos@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^5.3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
